--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         <div class="address">
             <div class="icon"><img src="img/geo.png" alt=""></div>
             <p>г. Белгород, <br>
-                пер. Харьковский, 36-Д</p>
+                пер. Харьковский, 36-Д, <br>помещение 402</p>
         </div>
 
         <div class="header-contacts">
@@ -120,16 +120,11 @@
             <img src="img/slide1.jpg" alt="" class="img-slide__bg">
             <div class="container">
                 <div class="main-box">
-                    <div class="main-box__title">Гранатовый
-                        песок
+                    <div class="main-box__title">Рутиловый концентрат
                     </div>
                     <div class="text">
-                        <p>Химически неактивный, гомогенный, неметаллический
-                            природный минерал, состоящий из гранул граната Альмандина,
-                            является крайне жестким и тяжелым абразивом с плотностью
-                            примерно 4,1—4,3 г/см³. Гранатовый песок является экологически
-                            безопасным природным минералом, что делает его более
-                            привлекательным для использования</p>
+                        <p>Рутиловый концентрат используется в производстве сварочных электродов, пигментной двуокиси
+                            титана, титановой губки и титана металлического.</p>
                     </div>
 
                     <a href="#" class="btn btn-accent">УЗНАТЬ ПОДРОБНЕЕ</a>
@@ -291,9 +286,9 @@
 
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod3.png" alt=""></div>
+                        <div class="product-card__img"><img src="img/prod3.jpg" alt=""></div>
                         <div class="location">-</div>
-                        <a href="#" class="product-card__title">Ильменит кусковой</a>
+                        <a href="#" class="product-card__title">Цирконовый концентрат</a>
 
                         <div class="packing-box">
                             <div class="packing-box__name">УПАКОВКА</div>
@@ -309,7 +304,7 @@
                     <div class="product-card">
                         <div class="product-card__img"><img src="img/prod4.jpg" alt=""></div>
                         <div class="location">Италия, Турция, Греция, Индия</div>
-                        <a href="#" class="product-card__title">Оливиновый песок</a>
+                        <a href="#" class="product-card__title">Рутиловый концентрат</a>
 
                         <div class="packing-box">
                             <div class="packing-box__name">УПАКОВКА</div>
@@ -352,7 +347,7 @@
 
         <div class="news-wrapper w-100">
             <div class="news-box">
-                <div class="category-news">АКЦИИ</div>
+                <div class="category-news">НОВОСТИ</div>
                 <a href="#" class="news-box__title">Доставка инертных материалов по
                     России снижена до 350 руб./м3</a>
                 <div class="date">06 Мая 2020</div>
@@ -441,8 +436,7 @@
             <div class="icon"><img src="img/exam.png" alt=""></div>
             <div class="text">
                 <h3>Прозрачные условия</h3>
-                <p>Сорпризов не будет: работаем по договору
-                    и соблюдаем условия</p>
+                <p>Работаем по договору и соблюдаем условия</p>
             </div>
         </div>
         <div class="advantages-box">
@@ -474,7 +468,7 @@
                 <div class="address">
                     <div class="icon"><img src="img/location.png" alt=""></div>
                     <p>г. Белгород, <br>
-                        пер. Харьковский, 36-Д</p>
+                        пер. Харьковский, 36-Д, помещение 402</p>
                 </div>
 
                 <a href="tel:+74722240010" class="phone">
@@ -561,7 +555,7 @@
             <div class="address">
                 <div class="icon"><img src="img/geo.png" alt=""></div>
                 <p>г. Белгород, <br>
-                    пер. Харьковский, 36-Д</p>
+                    пер. Харьковский, 36-Д, <br>помещение 402</p>
             </div>
 
             <a href="tel:+74722240010" class="phone">
