--- a/app/index.html
+++ b/app/index.html
@@ -120,8 +120,7 @@
             <img src="img/slide1.jpg" alt="" class="img-slide__bg">
             <div class="container">
                 <div class="main-box">
-                    <div class="main-box__title">Рутиловый концентрат
-                    </div>
+                    <div class="main-box__title">Рутиловый концентрат</div>
                     <div class="text">
                         <p>Рутиловый концентрат используется в производстве сварочных электродов, пигментной двуокиси
                             титана, титановой губки и титана металлического.</p>
