--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-<header>
+<header class="main-header">
     <div class="container">
         <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
 
@@ -44,7 +44,7 @@
         <div class="header-contacts">
             <a href="tel:+74722240010" class="phone">+7 (4722) <strong>24-00-10</strong></a>
             <a href="#" class="links-accent">
-                Заказать звонок</a>
+                Отправить запрос</a>
         </div>
 
         <div class="navigation">
@@ -100,9 +100,49 @@
 
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">каталог</a></li>
+                <li class="drop-item">
+                    <a href="#" class="drop-item__links">Продукция</a>
+                    <div class="drop-menu">
+                        <ul class="menu-dropDown">
+                            <li><a href="#">Хромитовый песок</a></li>
+                            <li><a href="#">Плавиковый шпат</a></li>
+                            <li><a href="#">Ильменит кусковой</a></li>
+                            <li><a href="#">Оливиновый песок</a></li>
+                            <li><a href="#">Стартовая смесь</a></li>
+                            <li><a href="#">Гранатовый песок</a></li>
+                            <li><a href="#">Рутиловый концентрат</a></li>
+                            <li><a href="#">Теплоизолирующая
+                                смесь Изом</a></li>
+                            <li><a href="#">Волластонит</a></li>
+                            <li><a href="#">Боксит</a></li>
+                            <li><a href="#">Андалузит</a></li>
+                            <li><a href="#">Хромитовый концентрат</a></li>
+                            <li><a href="#">Ставролит</a></li>
+                            <li><a href="#">Цирконовый песок</a></li>
+                            <li><a href="#">Цирконовый концентрат</a></li>
+                            <li><a href="#">Концентрат ильменитовый</a></li>
+                            <li><a href="#">Концентрат Дистен-
+                                Силлиманитовый порошок</a></li>
+                            <li><a href="#">Концентрат Дистен-
+                                Силлиманитовый зернистый</a></li>
+                            <li><a href="#">Диоксид марганца /
+                                Пиролюзит</a></li>
+                            <li><a href="#">Хромитовый песок</a></li>
+                            <li><a href="#">Хромитовый песок</a></li>
+                            <li><a href="#">Хромитовый песок</a></li>
+                            <li><a href="#">Хромитовый песок</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="#">оформить заказ</a></li>
-                <li><a href="#">о компании</a></li>
+                <li class="drop-item"><a href="#" class="drop-item__links">Компания</a>
+                    <div class="drop-menu">
+                        <ul class="menu-dropDown">
+                            <li><a href="#">О компании</a></li>
+                            <li><a href="#">Отзывы</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="#">новости</a></li>
                 <li><a href="#">контакты</a></li>
             </ul>
@@ -236,7 +276,7 @@
 <section class="products">
     <div class="products-top">
         <div class="container">
-            <div class="line-title"><h2>Наши продукты</h2>
+            <div class="line-title"><h2>Продукция</h2>
                 <div class="slider-product__nav">
                     <div class="slick-prev__arrow slick-arrow"></div>
                     <div class="slick-next__arrow slick-arrow"></div>
@@ -251,7 +291,7 @@
             <div class="product-slider w-100">
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod1.png" alt=""></div>
+                        <a href="product.html" class="product-card__img"><img src="img/prod1.png" alt=""></a>
                         <div class="location">ЮАР</div>
                         <a href="#" class="product-card__title">Хромитовый песок</a>
 
@@ -268,7 +308,7 @@
 
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod2.png" alt=""></div>
+                        <a href="product.html" class="product-card__img"><img src="img/prod2.png" alt=""></a>
                         <div class="location">Мексика, Иран, Китай</div>
                         <a href="#" class="product-card__title">Плавиковый шпат</a>
 
@@ -285,7 +325,7 @@
 
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod3.jpg" alt=""></div>
+                        <a href="product.html" class="product-card__img"><img src="img/prod3.jpg" alt=""></a>
                         <div class="location">-</div>
                         <a href="#" class="product-card__title">Цирконовый концентрат</a>
 
@@ -301,7 +341,7 @@
 
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod4.jpg" alt=""></div>
+                        <a href="product.html" class="product-card__img"><img src="img/prod4.jpg" alt=""></a>
                         <div class="location">Италия, Турция, Греция, Индия</div>
                         <a href="#" class="product-card__title">Рутиловый концентрат</a>
 
@@ -318,7 +358,7 @@
 
                 <div class="slide">
                     <div class="product-card">
-                        <div class="product-card__img"><img src="img/prod2.png" alt=""></div>
+                        <a href="product.html" class="product-card__img"><img src="img/prod2.png" alt=""></a>
                         <div class="location">Мексика, Иран, Китай</div>
                         <a href="#" class="product-card__title">Плавиковый шпат</a>
 
