--- a/app/product.html
+++ b/app/product.html
@@ -27,79 +27,15 @@
 
 <body>
 
-<header class="header">
+<header>
     <div class="container">
         <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
 
-        <div class="company-description">Концентраты и химические соединения
-            для литейной промышленности
-        </div>
-
-        <div class="address">
-            <div class="icon"><img src="img/geo.png" alt=""></div>
-            <p>г. Белгород, <br>
-                пер. Харьковский, 36-Д, <br>помещение 402</p>
-        </div>
-
-        <div class="header-contacts">
-            <a href="tel:+74722240010" class="phone">+7 (4722) <strong>24-00-10</strong></a>
-            <a href="#" class="links-accent">
-                Отправить запрос</a>
-        </div>
-
         <div class="navigation">
-
-            <div class="btn-burger"><img src="img/burger.png" alt=""></div>
-
-            <div class="dropDown-menu">
-                <div class="wrapper">
-                    <div class="dropDown-menu__box">
-                        <a href="#" class="dropDown-menu__title">Компания</a>
-                        <ul class="list-menu">
-                            <li><a href="#">О компании</a></li>
-                            <li><a href="#">История</a></li>
-                            <li><a href="#">Сертификаты</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Вакансии</a></li>
-                            <li><a href="#">Реквизиты</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="dropDown-menu__box">
-                        <a href="#" class="dropDown-menu__title">Услуги</a>
-                        <ul class="list-menu">
-                            <li><a href="#">О компании</a></li>
-                            <li><a href="#">История</a></li>
-                            <li><a href="#">Сертификаты</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Вакансии</a></li>
-                            <li><a href="#">Реквизиты</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="dropDown-menu__box">
-                        <a href="#" class="dropDown-menu__title">Оборудование</a>
-                        <ul class="list-menu">
-                            <li><a href="#">О компании</a></li>
-                            <li><a href="#">История</a></li>
-                            <li><a href="#">Сертификаты</a></li>
-                            <li><a href="#">Отзывы</a></li>
-                            <li><a href="#">Вакансии</a></li>
-                            <li><a href="#">Реквизиты</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="dropDown-menu__box">
-                        <a href="#" class="dropDown-menu__title">Наши объекты</a>
-                        <a href="#" class="dropDown-menu__title">Новости</a>
-                        <a href="#" class="dropDown-menu__title">Статьи</a>
-                        <a href="#" class="dropDown-menu__title">Контакты</a>
-                    </div>
-                </div>
-            </div>
 
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
+                <li><a href="#">Каталог</a></li>
                 <li class="drop-item">
                     <a href="#" class="drop-item__links">Продукция</a>
                     <div class="drop-menu">
@@ -134,12 +70,11 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="#">оформить заказ</a></li>
                 <li class="drop-item"><a href="#" class="drop-item__links">Компания</a>
                     <div class="drop-menu">
                         <ul class="menu-dropDown">
-                            <li><a href="#">О компании</a></li>
-                            <li><a href="#">Отзывы</a></li>
+                            <li class="w-100"><a href="#">О компании</a></li>
+                            <li class="w-100"><a href="#">Отзывы</a></li>
                         </ul>
                     </div>
                 </li>
@@ -147,8 +82,15 @@
                 <li><a href="#">контакты</a></li>
             </ul>
 
-            <div class="btn-search"><img src="img/search.png" alt=""></div>
         </div>
+
+        <div class="header-contacts">
+            <a href="tel:+74722240010" class="phone">+7 (4722) <strong>24-00-10</strong></a>
+            <a href="#" class="links-accent">
+                Отправить запрос</a>
+        </div>
+
+
 
         <div class="btn-burger__mobile"><img src="img/burger.png" alt=""></div>
     </div>
@@ -158,11 +100,11 @@
     <div class="container">
         <ul class="breadcrumbs">
             <li><a href="#">Главная</a></li>
-            <li><a href="#">Каталог продукции</a></li>
+            <li><a href="#">Продукция</a></li>
             <li><span>Оливиновый песок</span></li>
         </ul>
 
-        <h1>Наши продукты</h1>
+        <h1>Продукция</h1>
 
     </div>
 
@@ -238,9 +180,7 @@
         <ul class="footer-menu">
             <li><a href="index.html">Главная</a></li>
             <li><a href="#">каталог</a></li>
-            <li><a href="#">о компании</a></li>
             <li><a href="#">новости</a></li>
-            <li><a href="#">оформить заказ</a></li>
             <li><a href="#">контакты</a></li>
         </ul>
 
