--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,6 @@
 
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
                 <li class="drop-item">
                     <a href="#" class="drop-item__links">Продукция</a>
                     <div class="drop-menu">
@@ -518,7 +517,7 @@
 
         <ul class="footer-menu">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="#">каталог</a></li>
+            <li><a href="#">Продукция</a></li>
             <li><a href="#">новости</a></li>
             <li><a href="#">контакты</a></li>
         </ul>
