--- a/app/news.html
+++ b/app/news.html
@@ -35,7 +35,6 @@
 
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
                 <li class="drop-item">
                     <a href="#" class="drop-item__links">Продукция</a>
                     <div class="drop-menu">
@@ -100,10 +99,10 @@
     <div class="container">
         <ul class="breadcrumbs">
             <li><a href="#">Главная</a></li>
-            <li><span>Новости и акции</span></li>
+            <li><span>Новости</span></li>
         </ul>
 
-        <h1>Новости и акции</h1>
+        <h1>Новости</h1>
 
         <div class="news-wrapper w-100">
             <div class="news-box">
@@ -193,7 +192,7 @@
 
         <ul class="footer-menu">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="#">каталог</a></li>
+            <li><a href="#">Продукция</a></li>
             <li><a href="#">новости</a></li>
             <li><a href="#">контакты</a></li>
         </ul>
