--- a/app/catalog.html
+++ b/app/catalog.html
@@ -35,7 +35,6 @@
 
             <ul class="menu">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
                 <li class="drop-item">
                     <a href="#" class="drop-item__links">Продукция</a>
                     <div class="drop-menu">
@@ -100,10 +99,10 @@
     <div class="container">
         <ul class="breadcrumbs">
             <li><a href="#">Главная</a></li>
-            <li><span>Каталог продукции</span></li>
+            <li><span>Продукция</span></li>
         </ul>
 
-        <h1>Наши продукты</h1>
+        <h1>Продукция</h1>
     </div>
 
     <div class="main-catalog__wrapper bg-light-blue">
@@ -520,7 +519,7 @@
 
         <ul class="footer-menu">
             <li><a href="index.html">Главная</a></li>
-            <li><a href="#">каталог</a></li>
+            <li><a href="#">Продукция</a></li>
             <li><a href="#">новости</a></li>
             <li><a href="#">контакты</a></li>
         </ul>
